Fixed the overflow css bug.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,3 +72,8 @@ body {
 .clearfix{
     clear:both;
 }
+
+.container{
+    clear:both;
+    min-height: 100px;
+}
